se corrige todo el script que tenia cosas mal henchas como los stored procedures de alta modificacion de viajes que hacian un if not extists(select * from viaje where DATEDIFF(HOUR,fpartida,@fpartida)<=2) estaba mal y se corrijio para que realmente funcione, se hicieron inserts

--- a/ASP/TerminalUy/Persistencia/Persistencia.csproj
+++ b/ASP/TerminalUy/Persistencia/Persistencia.csproj
@@ -49,6 +49,7 @@
     <Compile Include="iPersistenciaViajeNacional.cs" />
     <Compile Include="PersistenciaCompania.cs" />
     <Compile Include="PersistenciaEmpleado.cs" />
+    <Compile Include="PersistenciaFacilidades.cs" />
     <Compile Include="PersistenciaTerminal.cs" />
     <Compile Include="PersistenciaViajeInternacional.cs" />
     <Compile Include="PersistenciaViajeNacional.cs" />
